--- a/src/global.scss
+++ b/src/global.scss
@@ -1,12 +1,8 @@
 /*
  * App Global CSS
  * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
+ * This file can be used as an entry point to import other
+ *  CSS/Sass files to be included in the output CSS.
  */
 
 /* Core CSS required for Ionic components to work properly */
@@ -18,9 +14,49 @@
 @import "~@ionic/angular/css/typography.css";
 @import '~@ionic/angular/css/display.css';
 
-/* Optional CSS utils that can be commented out */
+/* Optional CSS utils */
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+// TODO...
+// configure global font sizes in rm
+.text-sm {
+  font-size: .875rem;
+  line-height: 1.25rem;
+}
+
+.text-md {
+  
+}
+
+.text-lg {
+  
+}
+
+ion-toolbar {
+  text-align: center;
+  --background: var(--ion-color-dark);
+  --color: var(--ion-color-light);
+
+  ion-button {
+    text-transform: none;
+  }
+}
+
+ion-content {
+  --background: var(--ion-color-light);
+
+  ion-item {
+    --padding-start: 0;
+    --padding-end: 0;
+    --inner-padding-end: 0;
+    margin: 2px;
+  }
+}
+
+// :root {
+// }
