--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -11,12 +11,18 @@
   }
 
   [card] {
-    border: 1px solid var(--ion-color-medium);
-    border-radius: 10px;
-    background: white;
-    margin: 1vh 1vw;
     min-width: 400px;
     max-width: 600px;
+    background: white;
+    margin: 1vh 1vw;
+
+    border: 1px solid var(--ion-color-medium);
+    border-radius: 10px;
+
+    // card shadow
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
 
     .fieldRow:not(:last-child) {
       border-bottom: 1px solid var(--ion-color-medium);
