--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content class="ion-padding">
   <ion-grid contentGrid>
     <ion-row>
-      <ion-col *ngFor="let user of data" card>
+      <ion-col *ngFor="let user of usersData" card>
         <ion-grid>
           <ion-row *ngFor="let field of user | keyvalue" class="fieldRow">
             <ion-grid>
